@@ -1350,6 +1350,16 @@ acts.find("location").each(function(i){var it=$(this);
 });
 
 
+// Version 1 banner notice
+acts.each(function(i){var it=$(this);
+	var c=it.attr("version");
+	if( (c)== "1.01"  || (c)== "1.02" || (c)== "1.03" || (c)== "1.04" || (c)== "1.05" )
+	{
+		it.prepend($('<a href="https://iatistandard.org/en/news/notice-iati-standard-version-1-is-deprecated/" class="banner_v1">Data on this page has been published according to version 1 of the IATI Standard, which has now been deprecated. Learn more.</a>'));
+	}
+});
+
+
 //	add hide div to these classes
 $( "span.span_document-link, span.span_participating-org, span.span_recipient-country, span.span_budget, span.span_planned-disbursement, span.span_result, span.span_related-activity, span.span_location, span.span_recipient-region, span.span_policy-marker" ).each(function(i,el){
 	var e=$(el);
@@ -1484,4 +1494,3 @@ $( "result" ).each(function(i,el){
 });
 
 };
-
