@@ -1,3 +1,14 @@
+Development Portal (2019-07-20 shi)
+==============================
+Add Version 1 banner notice to SAVi
+Updated print-friendly css
+
+
+Development Portal (2019-07-18 shi)
+==============================
+Sticky labels for D-Portal-Logs
+
+
 Development Portal (2019-07-11 shi)
 ==============================
 Replace IS with brackets for policy-markers search filter
